add menu search for rests
