# server/public/swagger.json
@@ -576,6 +576,26 @@
 				}
 			}
 		},
+		"/menu/search": {
+			"get": {
+				"operationId": "Search",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {}
+							}
+						}
+					}
+				},
+				"tags": [
+					"MenuService"
+				],
+				"security": [],
+				"parameters": []
+			}
+		},
 		"/orders/search": {
 			"post": {
 				"operationId": "Search",
